@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.8.4
+ - No longer try to run tests for drivers not supported on a platform
  - Update lights and renderTargetTexture tests to work with Windows 10 (can't have so tiny Windows anymore).
  - Deprecate CMatrix4::transformBox as the result is no longer a boundingbox. Use CMatrix4::transformBoxEx instead (which has been available for a long time).
  - Fix CSceneCollisionManager::getPickedNodeBB which could sometimes miss collisions.
